kind/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ip-name
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
  - name: service-port
    port: 80
    targetPort: 8000
    protocol: TCP
