kind/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name
  labels:
    name: ingress-name
spec:
  ingressClassName: "nginx"
  rules:
  - host: bws-soft-domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-ip-name
            port: 
              number: 80
